--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,9 @@ body {
   font-family: 'Lato', sans-serif;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-color: black;
+  background-position: center;
 }
 
 .backgroundBody .backgroundOverlay {
